<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_detail_nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/movie_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/movie_detail_title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondaryText"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/movie_detail_title_text_view"
                style="@style/MovieDetailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:singleLine="false"
                android:textIsSelectable="true"
                tools:text="Movie Title" />

            <TextView
                android:id="@+id/movie_detail_year_text_view"
                style="@style/MovieDetailSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                tools:text="2015"></TextView>

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/detail_movie_synopsis_card_view"
            style="@style/MovieDetailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/movie_detail_synopsys_title_text_view"
                        style="@style/MovieDetailContainerTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Synopsis" />

                    <TextView
                        android:id="@+id/movie_detail_rate_value_text_view"
                        style="@style/MovieDetailContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:text="9/10" />

                    <ImageView
                        android:id="@+id/movie_detail_rate_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingRight="@dimen/rate_icon_margin_right"
                        tools:src="@drawable/ic_star_dark" />

                </LinearLayout>

                <include layout="@layout/divider" />

                <TextView
                    android:id="@+id/movie_detail_synopsys_data_text_view"
                    style="@style/MovieDetailContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Test" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/detail_movie_trailers_card_view"
            style="@style/MovieDetailContainer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/MovieDetailContainerTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Trailers" />

                <include layout="@layout/divider" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp">

                    <LinearLayout
                        android:id="@+id/movie_detail_trailer_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <ProgressBar
                            android:id="@+id/movie_detail_trailer_progress_bar"
                            style="?android:attr/progressBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/empty_trailer_list"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/text_padding_8dp"
                            android:text="@string/no_trailers"
                            android:visibility="gone" />

                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/detail_movie_reviews_card_view"
            style="@style/MovieDetailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/detail_movie_reviews_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/MovieDetailContainerTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews" />

                <include layout="@layout/divider" />

                <ProgressBar
                    android:id="@+id/movie_detail_review_progress_bar"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding_16dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/empty_review_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/text_padding_16dp"
                    android:paddingLeft="@dimen/text_padding_8dp"
                    android:paddingTop="@dimen/text_padding_16dp"
                    android:text="@string/no_reviews"
                    android:visibility="gone" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>